--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="rightcolumn">
           <div class="card">
             <h2>About Me</h2>
-            <div class="fakeimg" style="height:100px;">Image<img class="myImage" src="https://i.imgur.com/GrA6Jj0.jpg" alt="" /></div>
-            <p>Some text about me Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <div class="imageOne" style="height:100px;"><img class="myImage" src="https://i.imgur.com/GrA6Jj0.jpg" alt="" /></div>
+            <p class="aboutMe">Some text about me Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
           </div>
           <div class="card">
             <h3>Popular Post</h3>
@@ -41,7 +41,6 @@
           </div>
           <div class="card">
             <h3>Follow Me</h3>
-            <!-- <p>Some text..</p> -->
             <a href="https://www.instagram.com/tblu___/?hl=en" class="fa fa-instagram"></a>
             <a href="https://www.pinterest.com/tabrowne20869/" class="fa fa-pinterest"></a>
             <a href="#" class="fa fa-twitter"></a>
